manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansel
  namespace: ansel
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ansel
  template:
    metadata:
      labels:
        app: ansel
    spec:
      containers:
      - name: ansel
        image: 4lch4/ansel:latest
        ports:
        - containerPort: 4242
        livenessProbe:
          httpGet:
            path: /ansel/healthz
            port: 4242
          initialDelaySeconds: 25
        readinessProbe:
          httpGet:
            path: /ansel/healthz
            port: 4242
          initialDelaySeconds: 25
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
