manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ansel-ingress
  namespace: ansel
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - 4lch4.com
    secretName: letsencrypt-prod
  rules:
  - host: ansel.4lch4.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ansel
          servicePort: 4242
